# anilist-cli

./: Cargo.toml  README.md
src/: main.rs
src/api/: characters.rs  media.rs
src/utils/: characters.rs  io.rs  media.rs  search.rs
