[package]
name = "cli-for-anilist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde_json = "1.0.59"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
rpassword = "5.0.1"
bincode = "1.3.3"
termion = "1.5.6"
tui = "0.16.0"
